# investment

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA_MODELS.md  DECISIONS.md  EXAMPLE.md  IMPROVEMENTS.md  MILESTONES.md  README.md  REVISION_NOTES.md  Remarks.txt  TASKS.md  USE_CASES.md  investment-ARCHITECTURE.md  investment-CLAUDE.md  investment-TASKS.md  pyproject.toml  remarks.txt  spike_sqlite.py
.claude/: settings.json
docs/: ARCHITECTURE.md  DATA_MODELS.md  DECISIONS.md  EXAMPLE.md  IMPROVEMENTS.md  MILESTONES.md  STRATEGY_COMPARISON.md  TASKS.md  USE_CASES.md  V1_STRATEGY.md  skill-detect-us-inflation.md
src/investment/: __init__.py  chain.py  config.py  seed.py  uc8.py
src/investment/corpus/: embedding.py  ingester.py  watcher.py
src/investment/db/: schema.py  seed_data.py  sqlite.py
src/investment/market/: derivatives.py  fetcher.py  growth.py  liquidity.py  regime.py  splice.py
src/investment/mechanical/: backtests.py  calibration.py  gates.py  invariants.py  market_signal.py  outcomes.py  ratios.py  replay.py  scenarios.py  snapshots.py  verdad.py
src/investment/ops/: cli.py
src/investment/planner/: baseline.py  context.py  post.py  pre.py  retrieval.py
src/investment/telegram/: digest.py
src/investment/worker/: agent.py  curator.py  result.py  tools.py
src/investment/writeback/: knowledge.py  writeback.py
tests/: test_backtests.py  test_calibration.py  test_chain.py  test_curator.py  test_db.py  test_digest.py  test_embedding.py  test_gates.py  test_ingester.py  test_innovation_commit.py  test_invariants.py  test_knowledge_commit.py  test_market.py  test_market_signal.py  test_outcomes.py  test_planner_baseline.py  test_planner_context.py  test_planner_post.py  test_planner_pre.py  test_planner_retrieval.py  test_probation.py  test_ratios.py  test_regime.py  test_replay.py  test_scenarios.py  test_seed_corpus.py  test_seed_m5.py  test_seed_market.py  test_seed_nav.py  test_simulated_monday.py  test_snapshots.py  test_uc8.py  test_verdad.py  test_watcher.py  test_worker_agent.py  test_worker_tools.py  test_writeback.py  test_writeback_knowledge.py
