[project]
name = "investment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "anthropic>=0.116.0",
    "apscheduler>=3.11.3",
    "feedparser>=6.0.12",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pandas-datareader>=0.11.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.9.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "python-ulid>=3.1.0",
    "scipy>=1.18.0",
    "sentence-transformers>=5.6.0",
    "yfinance>=1.5.1",
]

[project.scripts]
investment = "investment:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
