[project]
name = "investment"
version = "0.1.0"
description = "Local investment agent — regime-aware portfolio ranking, digest, and paper-mode proposals (V1)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "anthropic>=0.116.0",
    "apscheduler>=3.11.3",
    "feedparser>=6.0.12",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pandas-datareader>=0.11.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.9.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "python-ulid>=3.1.0",
    "scipy>=1.18.0",
    "sentence-transformers>=5.6.0",
    "yfinance>=1.5.1",
]

[project.scripts]
invest = "investment.ops.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

# Rule set explicitly chosen per CLAUDE.md "Python Dev Standards" — not the
# bare default: UP enforces 3.13 syntax, B catches common traps, SIM
# simplifies, I sorts imports.
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tabular seed data (ALLOWED_TICKERS, edges): one aligned row per line is
# the readable form; wrapping each dict would destroy the table.
"src/investment/db/seed_data.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true

# yfinance ships no py.typed marker and no stub package exists (unlike
# pandas, covered by pandas-stubs) — every call through it is Any regardless,
# so a per-call `type: ignore` would be noise, not signal.
[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true
